# AegisOS

./: .editorconfig  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .importlinter  .lighthouserc.json  .vulture.toml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  deny.toml  docker-compose.infrastructure-mirror.yml  docker-compose.infrastructure.yml  package.json  playwright.config.ts  playwright.release.config.ts  pnpm-lock.yaml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
alembic/: env.py
capabilities/: boundary.py
checkers/: .bundled_manifest
crates/ordivon-kernel/: Cargo.toml
crates/ordivon-kernel/src/: authority.rs  comparator.rs  digest.rs  errors.rs  governance_ops.rs  lib.rs  observation.rs  policy.rs  redteam.rs  test_support.rs  tests.rs  types.rs
crates/ordivon-ledger/: Cargo.toml
crates/ordivon-ledger/src/: lib.rs
crates/ordivon-ledger/src/postgres/: adapter.rs  authority.rs  ledger.rs  mod.rs  projection.rs  redteam.rs  schema.rs
data/: openapi_snapshot_baseline.json
docs/: PFIOS_MASTER_MANUAL.md  README.md  naming.md
evals/: coding_cases.json  cross_pack_cases.json  run_evals.py
execution/: catalog.py
governance/: policy_source.py
governance_engine/: __init__.py  approval_repository.py  feedback.py  policy_source.py
mcp/: servers.json
policies/: policy-inventory.json
prompts/: claim-audit.md  engineering-reentry.md  receipt-seal.md
registries/: agent-registry.json  eval-registry.jsonl  skill-registry.jsonl  tool-registry.jsonl
scripts/: apply-coverage-resolution-batch.py  audit_ordivon_verify_public_wedge.py  audit_runtime_evidence_db.py  backup_db.py  capture_trace.py  check_architecture.py  (+105 more)
(+1414 files in other folders)
