[workspace]
members = [
    "crates/ordivon-kernel",
    "crates/ordivon-ledger",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "Proprietary"
version = "0.1.0"

[workspace.dependencies]
base64 = "0.22"
ed25519-dalek = "2"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres", "json"] }
time = { version = "0.3", features = ["formatting", "parsing"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
