[package]
name = "ordivon-kernel"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
base64.workspace = true
ed25519-dalek.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
time.workspace = true

[dev-dependencies]
tokio.workspace = true

[features]
policy-http = []
postgres-integration = []
test-support = []
