[package]
name = "ordivon-ledger"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ordivon-kernel = { path = "../ordivon-kernel" }
serde.workspace = true
serde_json.workspace = true
sqlx = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }

[dev-dependencies]
tokio.workspace = true

[features]
postgres = ["dep:sqlx", "dep:tokio", "ordivon-kernel/postgres-integration"]
postgres-integration = ["postgres", "ordivon-kernel/test-support"]
policy-http = ["ordivon-kernel/policy-http"]
